--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,user-scalable=0" />
-        <link rel="stylesheet" type="text/css" href="assets/css/ecercício.css" />
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
 
         <title>Charles Babbage</title>
