trechos do texto modificado

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
                         <article>
                             <divm class="sobre">
                                 <p><strong>Charles Babbage</strong> nasceu a 26 de dezembro de 1791 em Teignmouth, Inglaterra, 
-                                  foi um cientista,matemático,filósofo e enegenheiro mecanico  
+                                  foi um cientista,matemático,filósofo e engenheiro mecânico  
                                     
                                 </p>
                                 <p>
                                     Charles Babbage é mais conhecido e, de certa forma,  como o inventor que projetou
-                                    o primeiro computador de uso geral, utilizando apenas partes mecânicas, considerado o pioneiro. 
+                                    o primeiro computador de uso geral, utilizando apenas partes mecânicas. 
                                     Seu invento, porém, exigia técnicas bastante avançadas e caras na época, e nunca foi construído.
                                 </p>
                                 <br/>
